# catstorm

./: .gitignore  .travis.yml  LICENSE  PRESENTATION  README.md  ast.py  codegen.ls  features.ls  frame.py  grammar.py  grammar.xmind  indent.py  interpreter.py  log.py  peg.py  pratt.py  prettybt.py  pyproject.toml  run-tests.sh  storm.py  syntax_tree.py  writer.py
catstorm/: frame.py  grammar.py  indent_parser.py  interpreter.py  log.py  peg.py  pratt.py  prettybt.py  storm.py
tests/: adt.ls  arrays.ls  bool.ls  features.ls  for_loop.ls  func_main_ret_0.ls  func_triv.ls  funcs.ls  getattr.ls  hello.ls  if.ls  iter.ls  oop.ls  rewrite.ls  strings.ls  switch.ls  while_loop.ls
tests/ast/: implicit_call.ls
tests/bugz/: array_crash.ls  attr_access.ls  attr_access2.ls  empty_list.ls  rec_func.ls  ret_bug.ls
tests/internals/: test_indent_parser.py
tests/interpreter/: features.ls
tests/interpreter/bugz/: attr_access.ls  attr_access2.ls  empty_list.ls  rec_func.ls  subscript_prio.ls
tests/interpreter/data_types/: bool.ls  dict.ls  iter.ls  strings.ls
tests/interpreter/functions/: adt1.ls  func_main_ret_0.ls  implicit_call.ls
tests/interpreter/loops/: while_loop.ls
tests/interpreter/oop/: oop.ls  rewrite.ls
