[tool.poetry]
name = "catstorm"
version = "0.1.0"
description = ""
authors = ["Alexandre Kandalintsev <exe.sre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
