[tool.poetry]
name = "catstorm"
version = "0.1.1"
description = ""
authors = ["Alexandre Kandalintsev <exe.sre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pdbpp = "^0.10.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
poetry = "^1.3.2"
ipython = "^8.10.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my_package_cli = 'catstorm.storm:main'
